--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,10 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# IDEs
+.vscode
+.idea
+
+# Local github workflows
+.github
