Ensure we output what we need so we can use in our local tests

--- a/action.yaml
+++ b/action.yaml
@@ -24,6 +24,11 @@ inputs:
 outputs:
   time: # id of output
     description: The time we greeted you
+  person:
+    description: The name of who we greeted
+
+
+
 
 runs:
   using: node20
